force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log__c/BMCServiceDesk__Configuration_Set_Log__c.object-meta.xml
<CustomObject>
    <label>Configuration Set Log</label>
    <nameField>
        <displayFormat>CSL-{000000}</displayFormat>
        <label>Configuration Set Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Set Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>