force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log__c/fields/BMCServiceDesk__Sandbox_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Sandbox_Org_Id__c</fullName>
    <description>To store Sandbox Organization Id to which connection is done.</description>
    <label>Sandbox Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>