force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log__c/fields/BMCServiceDesk__Sandbox_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Sandbox_Org_Name__c</fullName>
    <description>To store Sandbox Organization Name to which connection is done.</description>
    <label>Sandbox Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>