force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log__c/fields/BMCServiceDesk__Sandbox_Username__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Sandbox_Username__c</fullName>
    <description>Sandbox Username using which connection is done.</description>
    <label>Sandbox Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>