force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log__c/fields/BMCServiceDesk__Success_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Success_Error_Log__c</fullName>
    <description>To store success/error log while connecting to Sandbox.</description>
    <label>Log</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>