force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log__c/fields/BMCServiceDesk__Success_Error_Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Success_Error_Status__c</fullName>
    <description>To store success or failure status while importing Configurations from Sandbox.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>